# CChess

./: .gitignore  CMakeLists.txt  README.md  game  game.c  input.c  render.c
build_new/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MyRaylibGame  cmake_install.cmake  compile_commands.json
build_new/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_new/raylib/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: doc.md  doc.mk
inc/: game.h  game_state.h  input.h  legal_moves.h  piece_moves.h  render.h  resource.h  utils.h
inc_new/: game.h  game_renderer.h  resource.h
src/: game.c  game_state.c  input.c  legal_moves.c  main.c  piece_moves.c  render.c  resource.c  utils.c
src_new/: game.c  game_renderer.c  main.c  resource.c
